--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "vue-virtual-table",
+  "name": "vue-virtual-table-variable-height",
   "version": "0.2.22",
-  "description": "vue table component with virtual dom",
-  "author": "https://github.com/waningflow",
+  "description": "vue table component with virtual dom. waningflow/vue-virtual-table fork",
+  "author": "https://github.com/AnyonyOnScript",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/waningflow/vue-virtual-table.git"
+    "url": "https://github.com/AnyonyOnScript/vue-virtual-table-variable-height.git"
   },
   "keywords": [
     "vue",
